fix appearing horizontal scrollbar when switching tabs

--- a/projects/composition/src/app/pages/tab-group-page/tab-group-page.component.scss
+++ b/projects/composition/src/app/pages/tab-group-page/tab-group-page.component.scss
@@ -1,5 +1,4 @@
 :host {
-  overflow-x: hidden;
   .tabs-elems-group {
     margin-bottom: 4px;
 
